--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "js-cookies": "^1.0.4",
     "jwt-decode": "^4.0.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
